tests/transpiler/x/py/group_by_multi_join.py
# Generated by Mochi transpiler v0.10.34 on 2025-07-22 06:16 +0700
from dataclasses import dataclass
from typing import List, Dict
import json

@dataclass
class Nation:
    id: int
    name: str

nations = [Nation(1, "A"), Nation(2, "B")]
@dataclass
class Supplier:
    id: int
    nation: int

suppliers = [Supplier(1, 1), Supplier(2, 2)]
@dataclass
class PartSupp:
    part: int
    supplier: int
    cost: float
    qty: int

partsupp = [PartSupp(100, 1, 10.0, 2), PartSupp(100, 2, 20.0, 1), PartSupp(200, 1, 5.0, 3)]
@dataclass
class Filtered:
    part: int
    value: float

filtered = [Filtered(ps.part, ps.cost * ps.qty) for ps in partsupp for s in suppliers for n in nations if s["id"] == ps.supplier and n["id"] == s["nation"] and n["name"] == "A"]
@dataclass
class GroupedGroup:
    key: any
    items: list

_grouped_groups = {}
for x in filtered:
    _g = _grouped_groups.setdefault(x["part"], GroupedGroup(x["part"], []))
    _g.items.append(x)
@dataclass
class Grouped:
    part: str
    total: any

grouped = [Grouped(g.key, sum([r["value"] for r in g.items])) for g in _grouped_groups.values()]
print(json.dumps(grouped))
